fixed pixel on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -251,7 +251,7 @@ footer{
   header h2{
   	font-size: 10px;
   	//margin-right: 30px;
-  	float: center;
+  	float: none;
   }
 
   #Welcome section{
@@ -260,6 +260,10 @@ footer{
 
   .showcase::after {
     height: 80vh;
+  }
+
+  .Intro {
+  	margin-left: 40px;
   }
 
   .Intro h2{
